feat: add link rsschool & github in footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<section>
 				<h2 id="contact-info">Contact info</h2>
 				<ul>
-					<li>Phone: +38 (099) 160 90 85</li>
+					<li>Phone: <a href="tel:+380991609085">+38 (099) 160 90 85</a></li>
 					<li>Email: <a href="mailto:stanislav.shendryk@gmail.com">stanislav.shendryk@gmail.com</a></li>
 					<li>Telegram: <a href="https://t.me/webjoker">webJoker</a></li>
 				</ul>
@@ -63,7 +63,15 @@
 	</main>
 	<footer>
 		<div class="wrapper">
+
+			<a href="https://rs.school/js/" target="_blank">
+				<img src="https://rs.school/images/rs_school_js.svg" alt="logo rsschool" class="logo rsschool">
+			</a><a href="https://github.com/shendryk/" target="_blank"><img class="logo github"
+					src="https://github.githubassets.com/images/modules/logos_page/GitHub-Logo.png" alt="logo github"></a>
 			<p>&copy; Stanislav Shendryk</p>
+
+
+
 		</div>
 	</footer>
 </body>
